# dotfiles-cleaned

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  a
archive/config/: pikaur.conf  vscodium_extensions
doc/: INSTALLATION.md  SHORTCUTS.md  YAFETCH.md
dotfiles/RCs/: .bash_profile  .bashrc  nanorc
dotfiles/config/: .Xmodmap  .xprofile  QtProject.conf  bloat.list  cran.conf  emoji.list  extra.kb  gefrc  kdenlive-layoutsrc  kdenliverc  klinesrc  license.conf  mimeapps.list  mkqemuvm.conf  mpvp.css  mpvp.json  myt.conf  pavucontrol.ini  pikaur.conf  searx_cli.ini  user-dirs.dirs
dotfiles/config/proj_tmpl/pypi/: .gitignore  MANIFEST.in  README.md  mkproj_autorun  pyproject.toml  setup.cfg  tox.ini
dotfiles/config/proj_tmpl/pypi/PROJ_NAME/: __init__.py
dotfiles/config/proj_tmpl/pypi/scripts/: git.sh  pypi.sh
dotfiles/core/: .xinitrc  .xprofile  20-intel-graphics.conf  custom_mapping.map  doas.conf  dracut.conf  grub  hosts  kernel_unfreeze_rtw.conf  mkinitcpio.conf  pacman.conf  paru.conf  profile  profile.env  rc.conf  reflector.conf  rtw.conf  st.desktop  sudoers  tlp.conf
dotfiles/etc/: .fehbg  .gitconfig  .gtkrc-2.0  .lynxrc  .mailcap  extension-preferences.json  extension-settings.json  muttrc  prefs.js  userChrome.css
dotfiles/fix/: gentoo_new_kernel.md  wpa_cli_fix.latex
dotfiles/linux/: .config
dotfiles/openrc/: kbdrate
dotfiles/qbittorrent/: yafetch
list/: baz.list  jupyter_entensions.list  kernel.release  location.list  npm.list  openrc_services.sysvinit.list  package.list  package_full.list  packagei_full.list  pip_modules.list  root_symlinks.list  src.list  systemd_services.list
scripts/: add_changelog  clean_firefox_profile  git.sh  install.sh  tools.sh  transfer.sh  water.txt
(+2889 files in other folders)
